JEDIT VERSION HISTORY

* Version 2.3pre5

+ Enhancements

- Options dialog box looks better (Mike Dillon)

+ Bug Fixes

- Options dialog box didn't display 'plugins' branch sometimes

* Version 2.3pre4

+ New Features

- ViewUpdate.TEXTAREA_DESTROYED message fired when view is being unsplit
- Gutter updates: (Mike Dillon)
  - gutter option pane added
  - right-click context menu added
  - 'show line numbers' and 'gutter expanded' menu item commands added
    (you can assign shortcuts to them)
  - gutter can be resized by dragging the mouse
  - gutter looks better

+ Enhancements

- Improved options dialog box now uses a tree instead of a list, plugins
  can add their own tree nodes (Mike Dillon)
- New ignore case and regexp icons for tool bar (Andre Kaplan)
- Documentation updates

+ Bug Fixes

- Fixed NullPointerException when doing search and replace with tool bar
  disabled (since 2.3pre1)
- Buffer tabs position setting was broken (since 2.3pre3)
- Reversed terminology on the split-horizontal and split-vertical
  actions (since 2.3pre3)
- Reload was broken with split panes (unfortunately, the only way to
  fix this right now is to unsplit views when reloading)
- Fixed gutter repaint problem when splitting views (since 2.3pre3)
- Perl mode now correctly highlights read-ins of the form
  <<"EOF", << "EOF", etc (since 1.7pre2)

* Version 2.3pre3

+ New Features

- Views can be split - C+e 1 unsplits, C+e 2 splits vertically,
  C+e 3 splits horizontally.
- 'Indent Line' command replaced with 'Indent Selected Lines' -- it
  indents all lines in the selection, or the current line if nothing
  is selected
- BeanShell syntax highlighting for .bsh files
- Gutter shows line numbers, plugins can add highlighters
  (Mike Dillon)

+ Enhancements

- Buffer tabs position (top, left, right, bottom) can now be set
- Buffer tabs now show tool tips with the full path of buffers
- Better regexp and ignore case icons (Valery Kondakoff)
- Documentation updates